--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -253,7 +253,7 @@
 	journal = "Journal of Applied Crystallography",
 	volume = "38",
 	number = "3",
-	pages = "405--411",
+	pages = "405-411",
 	year = "2005",
 	doi = {10.1107/S0021889805004875},
 }
@@ -268,7 +268,7 @@
 	journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
 	issn = {0168-9002},
 	volume = {697},
-	pages = {40 -- 44},
+	pages = {40-44},
 	doi = {10.1016/j.nima.2012.08.050},
 	OPTurl = {https://www.sciencedirect.com/science/article/pii/S0168900212009217},
 }
@@ -295,7 +295,7 @@
 	title = {{Update 1.5 to ``Takin: An open-source software for experiment planning, visualisation, and data analysis'', (PII: S2352711016300152)}},
 	journal = "SoftwareX",
 	volume = "6",
-	pages = "148 -- 149",
+	pages = "148-149",
 	year = "2017",
 	issn = "2352-7110",
 	doi = "10.1016/j.softx.2017.06.002",
@@ -309,7 +309,7 @@
 	title = {{Takin: An open-source software for experiment planning, visualisation, and data analysis}},
 	journal = "SoftwareX ",
 	volume = "5",
-	pages = "121 -- 126",
+	pages = "121-126",
 	year = "2016",
 	issn = "2352-7110",
 	doi = "10.1016/j.softx.2016.06.002",
@@ -422,9 +422,10 @@
 {
 	Jeong1998,
 	author = {J. Jeong and K. Kim},
-	title = {{Tool path generation for machining free-form pockets using Voronoi diagrams}},
+	title = {{Tool Path Generation for Machining Free-Form Pockets Using Voronoi Diagrams}},
 	journal = {The International Journal of Advanced Manufacturing Technology},
 	volume = {14},
+	number = {12},
 	pages = {876-881},
 	year = {1998},
 	publisher = {Springer},
@@ -432,7 +433,9 @@
 }
 
 
-@article{Hwang2003,
+@article
+{
+	Hwang2003,
 	title = {A fast path planning by path graph optimization},
 	author = {Hwang, Joo Young and Kim, Jun Song and Lim, Sang Seok and Park, Kyu Ho},
 	journal = {IEEE Transactions on systems, man, and cybernetics-part a: systems and humans},
@@ -446,7 +449,9 @@
 }
 
 
-@article{Singal2014,
+@article
+{
+	Singal2014,
 	title = {Dijkstra shortest path algorithm using global positioning system},
 	author = {Singal, Pooja and Chhillar, R. S.},
 	journal = {International Journal of Computer Applications},
@@ -455,6 +460,23 @@
 	number = {6},
 	pages = {12-18},
 	year = {2014}
+}
+
+
+@article
+{
+	Couprie2007,
+	author = {Michel Couprie and David Coeurjolly and Rita Zrour},
+	title = {{Discrete bisector function and Euclidean skeleton in 2D and 3D}},
+	journal = {Image and Vision Computing},
+	volume = {25},
+	number = {10},
+	pages = {1543-1556},
+	year = {2007},
+	note = {Discrete Geometry for Computer Imagery 2005},
+	issn = {0262-8856},
+	doi = {10.1016/j.imavis.2006.06.020},
+	url = {https://www.sciencedirect.com/science/article/pii/S0262885606003064},
 }
 
 % -----------------------------------------------------------------------------
@@ -1150,6 +1172,15 @@
 	note = "[Online; accessed 16-August-2021]"
 }
 
+
+@misc
+{
+	Hegazy2014,
+	author = {Doaa Hegazy},
+	title = {{Computer Graphics - SCC 342 --- Chapter 4: Graphics Output Primitives (Lecture)}},
+	year = {2014},
+	note = "[Online; accessed 23-August-2021]"
+}
 
 % -----------------------------------------------------------------------------
 
