--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -81,6 +81,7 @@
 %\part{Back matter}
 %\addcontentsline{toc}{part}{Back matter} 
 \input{tex/gl.tex}
+\input{tex/tests.tex}
 \input{tex/notation.tex}
 \input{tex/publications.tex}
 \input{tex/errata.tex}
