--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -836,6 +836,18 @@
 
 @misc
 {
+	web_boost_test,
+	title = {{Boost.Test, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
+	author = {Gennadiy Rozental and Raffi Enficiaud},
+	year = {2001-2020},
+	url = "https://www.boost.org/doc/libs/1_77_0/libs/test/doc/html/index.html",
+	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_77_0/libs/test/doc/html/index.html}",
+	note = "[Online; accessed 23-August-2021]",
+}
+
+
+@misc
+{
 	web_boost_proptree,
 	title = {{Boost.PropertyTree, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
 	author = {Marcin Kalicinski and Sebastian Redl},
@@ -1170,6 +1182,39 @@
 	year = "1991-2006",
 	url = "https://www.khronos.org/registry/OpenGL-Refpages/gl2.1/xhtml/gluUnProject.xml",
 	note = "[Online; accessed 16-August-2021]"
+}
+
+
+@misc
+{
+	web_webgl_ortho,
+	author = {C. Wayne Brown},
+	title = {{Learn WebGL, Chapter 8.2: Orthographic Projections}},
+	year = {2015-2016},
+	url = "http://learnwebgl.brown37.net/08_projections/projections_ortho.html",
+	note = "[Online; accessed 23-August-2021]"
+}
+
+
+@misc
+{
+	web_webgl_perspective,
+	author = {C. Wayne Brown},
+	title = {{Learn WebGL, Chapter 8.3: Perspective Projections}},
+	year = {2015-2016},
+	url = "http://learnwebgl.brown37.net/08_projections/projections_perspective.html",
+	note = "[Online; accessed 23-August-2021]"
+}
+
+
+@misc
+{
+	web_webgl_viewport,
+	author = {C. Wayne Brown},
+	title = {{Learn WebGL, Chapter 8.4: Viewports}},
+	year = {2015-2016},
+	url = "http://learnwebgl.brown37.net/08_projections/projections_viewport.html",
+	note = "[Online; accessed 23-August-2021]"
 }
 
 
