--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -72,6 +72,8 @@
 \input{tex/paths.tex}
 \input{tex/implementation.tex}
 \input{tex/interfaces.tex}
+\input{tex/tests.tex}
+\input{tex/outlook.tex}
 
 % Nomad interface
 % Verweis auf Nomad 3D und vTAS/vEXP
@@ -81,7 +83,6 @@
 %\part{Back matter}
 %\addcontentsline{toc}{part}{Back matter} 
 \input{tex/gl.tex}
-\input{tex/tests.tex}
 \input{tex/notation.tex}
 \input{tex/publications.tex}
 \input{tex/errata.tex}
