screenshots for test tools

--- a/tex/gl.tex
+++ b/tex/gl.tex
@@ -226,7 +226,7 @@ component, $w$, and three imaginary components, $x$, $y$, and $z$.
 Usually, quaternions are written as tuples $\left( w,\,x,\,y,\,z \right) = \left( w,\,\underline{v} \right) \in \mathbb{H}$,
 where the three imaginary components are treated as a vector component.
 Algebraically, quaternions form the division ring $\mathbb{H}$, named after William Rowan Hamilton, which follows from the 
-basic properties of the three imaginary units, $i$, $j$, and $k$ \cite{TODO}:
+basic properties of the three imaginary units, $i$, $j$, and $k$ \cite[p. 103]{Kuipers2002}:
 \begin{equation}
 	i^2 \ =\ j^2 \ =\ k^2 \ =\ ijk \ =\ -1.
 	\label{eq:quat_basic}
