--- a/tex/tests.tex
+++ b/tex/tests.tex
@@ -26,6 +26,44 @@ These are described in section \ref{sec:tests_tools}.
 \label{sec:tests_tools}
 
 
+\subsection{Line segments tool}
+\begin{figure}[htb]
+	\centering
+	\includegraphics[width = 0.49 \textwidth]{figures/linesgui_voro}
+	\hspace{0.05cm}
+	\includegraphics[width = 0.49 \textwidth]{figures/linesgui_trapezoid}
+
+	\vspace{0.25cm}
+	\includegraphics[width = 0.49 \textwidth]{figures/linesgui_inters}
+	\caption[Line segments tool.]{Line segments tool.
+		\label{fig:linesgui}}
+\end{figure}
+
+
+
+\subsection{Polygon tool}
+\begin{figure}[htb]
+	\centering
+	\includegraphics[width = 0.49 \textwidth]{figures/polygui_convex}
+	\hspace{0.05cm}
+	\includegraphics[width = 0.49 \textwidth]{figures/polygui_kernel}
+	\caption[Polygon tool.]{Polygon tool.
+		\label{fig:linesgui}}
+\end{figure}
+
+
+
+\subsection{Convex hull tool}
+\begin{figure}[htb]
+	\centering
+	\includegraphics[width = 0.49 \textwidth]{figures/hullgui_voro}
+	\hspace{0.05cm}
+	\includegraphics[width = 0.49 \textwidth]{figures/hullgui_kruskal}
+	\caption[Convex hull tool.]{Convex hull tool.
+		\label{fig:linesgui}}
+\end{figure}
+
+
 
 
 \section{Unit tests}
